# fimcp

./: .gitignore  Makefile.am  Makefile.in  README  configure  configure.ac  gecode.m4
lib/: Makefile.am  Makefile.in
src/: LICENSE  Makefile.am  Makefile.in  README  RELEASE  TODO  example.txt  fimcp_avgcost.cpp  fimcp_closed+cost.cpp  fimcp_closed.cpp  fimcp_cost.cpp  fimcp_deltaclosed.cpp  fimcp_discriminating+deltaclosed.cpp  fimcp_discriminating.cpp  fimcp_maximal.cpp  fimcp_size.cpp  fimcp_standard.cpp
src/common/: constraint_linearPlus.cpp  constraint_linearPlus.hh  fimcp_basic.cpp  fimcp_basic.hh  floatoption.cpp  floatoption.hh  options_fimcp.cpp  reader_eliz.cpp  reader_ssfloat.cpp  reader_ssv.cpp  stringuintoption.cpp  stringuintoption.hh  textoption.cpp  textoption.hh
src/more/: Makefile  Makefile.am  Makefile.in  fimcp_closed+cost_dependent.cpp  fimcp_closedPlus.cpp  fimcp_costReif.cpp  fimcp_discriminating+deltaclosed+size_dependent.cpp  fimcp_discriminating+deltaclosed+size_independent.cpp  fimcp_emerging.cpp  fimcp_maximal+closed.cpp  fimcp_standardNoreif.cpp  fimcp_standardPlus.cpp
